# MiroFish

./: .env.example  Dockerfile  FRONTEND_MIGRATION_PLAN.md  docker-compose.yml  package.json  seed.md
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: abides_runner.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/services/data/: market_store.py
backend/app/services/engine/: action_translator.py  llm_coordinator.py
backend/app/utils/: codex_auth.py  file_parser.py  llm_client.py  logger.py  openai_helpers.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  codex_login.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: conftest.py
backend/tests/api/: test_graph_contract.py  test_report_contract.py  test_simulation_contract.py
backend/tests/api/v2/: test_websocket_fanout.py
backend/tests/engine/: test_abides_integration.py  test_action_translator.py  test_broadcaster.py  test_llm_coordinator.py
backend/tests/graph/: test_graph_abstraction.py
backend/tests/services/: test_ontology_generator.py
backend/tests/services/data/: test_market_store.py
docs/: migration-plan.md
frontend-react/: Dockerfile  index.html  package-lock.json  package.json  (+2 more)
(+54 files in other folders)
